<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="50dp"
        android:layout_height="30dp"
        android:text="@string/checkbox" />

    <ToggleButton
        android:id="@+id/toggleButton2"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:text="@string/togglebutton" />

    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/button" />
</LinearLayout>
